--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "dependencies": {
     "gulp": "^3.9.0",
     "gulp-sass": "^2.0.4"
+  },
+  "devDependencies": {
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-rename": "^1.2.2"
   }
 }
