--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "v4.0.0-alpha.5",
     "es6-promise": "^4.0.5",
     "fetch": "^2.0.1",
     "font-awesome": "fontawesome#^4.7.0"
