--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "MoebiusMania Ghost Theme",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "move-js": "node -e 'require(\"./actions.js\").moveJS()';",
+    "postinstall": "npm run move-js"
   },
   "author": "Salvatore Laisa",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "4.0.0-alpha.5",
     "font-awesome": "^4.7.0",
+    "fs-extra": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
     "promise-polyfill": "^6.0.2",
