--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MoebiusManiaType",
+  "name": "moebiusmania-type",
   "version": "1.2.0",
   "description": "MoebiusMania Ghost Theme",
   "main": "actions.js",
@@ -18,13 +18,13 @@
   "author": "Salvatore Laisa <moebiusmania@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "4.0.0-alpha.6",
-    "clean-css": "4.1.3",
+    "bootstrap": "4.0.0",
+    "clean-css": "4.1.11",
     "font-awesome": "4.7.0",
     "fontawesome": "4.7.2",
-    "fs-extra": "3.0.1",
-    "promise-polyfill": "6.0.2",
-    "whatwg-fetch": "2.0.3"
+    "fs-extra": "5.0.0",
+    "promise-polyfill": "7.1.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {}
 }
